tests/restrict-github-team-external-identity/grants-update/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: github-config-source
userInfo:
  username: system:serviceaccount:github-config:github-config
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:github-config
    - system:authenticated
